Adding flex to nav bar & flexing the main body where a img is included.
This is a first try on using flex on an attempt of nav bar and also
trying to flex main body for the first section together with an image.

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,13 @@ li {
     height: auto;
     flex: 1;
 }
+
+.container1 {
+    display: flex;
+}
+
+.item {
+    heigth: auto;
+    width: 750px;
+    flex: 1;
+}
