first attempt adding colors

--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,11 @@ img {
     border: 2px solid red;
     text-align: center;
 }
+
+.footer {
+    background-color: #1F2937;
+}
+
+.sect3 {
+    background-color:#E5E7EB;
+} 
